Fix spacing on homepage

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -2,23 +2,19 @@ h1.title, h2.title, h3.title, p {
   word-break: break-word !important;
 }
 
-// .section .container {
-//   padding-bottom: 30px;
-//   border-bottom: 1px solid $ffc-grey;
-// }
+.homepage-section {
+  padding-top: 0px;
+  
 
-// .section {
-//   padding-top: 0;
-//   padding-bottom: 20px;
-// }
-
-#testimonals, #how-its-done, #our-mission {
-  h1,h2,h3 {
-    margin-bottom: 60px;
+  .container {
+    padding-bottom: 30px;
+    border-bottom: 1px solid $ffc-grey;
   }
 
-  p {
-    margin-bottom: 40px;
+  &:last-of-type {
+    .container {
+      border-bottom: none;
+    } 
   }
 }
 
@@ -77,43 +73,10 @@ h1.title, h2.title, h3.title, p {
   }
 }
 
-#testimonals {
-  .column {
-    padding: 20px;
-  }
-
-  i {
-    display: inline-block;
-    margin-top: 30px;
-    font-size: 12pt;
-    letter-spacing: 1px;
-  }
-
-  p {
-    margin-top: 20px;
-  }
-}
-
-
-
-#how-its-done {
-  padding: 0;
-  .container {
-    border-top: 1px solid $ffc-grey;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border-bottom: 1px solid $ffc-grey;
-  }
-  p {
-    margin: 24px;
-  }
-}
-
 .circle {
   width: 80px;
   height: 80px;
   border-radius: 40px;
-  // background: red;
   line-height: 70px;
   font-size: 24pt;
   font-weight: bold;
